<resources>
    <string name="app_name">agendaWS</string>
    <string name="userName">User Name</string>
    <string name="userEmail">Email</string>
    <string name="userPassword">Password</string>
    <string name="btnRegisterUser">Register</string>
    <string name="btnGetInto">Get Into</string>
    <string name="titleRegister">Register</string>
    <string name="titleLogin">Login</string>
    <string name="btnCloseSession">Close Sessión</string>
    <string name="title_mainActivity">My Events</string>
    <string name="btnCreateEvent">Create</string>
    <string name="hint_titleEvent">Title</string>
    <string name="hint_dateEvent">dd/mm/yyyy</string>
    <string name="hint_hourEvent">hh:mm</string>
    <string name="titleNewEvent">New Event</string>
    <string name="txt_btnDelete">Delete</string>
    <string name="txt_btnUpdate">Upadte</string>
</resources>