<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity">

    <Spinner
        android:id="@+id/categoria2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"

        android:layout_marginEnd="32dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inpName2"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/inpName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"

        android:ems="10"
        android:hint="@string/titleNewEvent"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/inpDate2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="100dp"

        android:clickable="true"
        android:focusable="false"
        android:hint="@string/hint_dateEvent"
        android:inputType="date"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoria2"
        app:layout_constraintVertical_bias="0.115"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/inpHour2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="56dp"

        android:ems="10"
        android:hint="@string/hint_hourEvent"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inpDate2"
        app:layout_constraintVertical_bias="0.195"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ib_obtener_hora2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toEndOf="@+id/inpHour2"
        app:layout_constraintTop_toBottomOf="@+id/inpDate2"
        app:srcCompat="@drawable/ic_time" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ib_obtener_fecha2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toEndOf="@+id/inpDate2"
        app:layout_constraintTop_toBottomOf="@+id/categoria2"
        app:srcCompat="@drawable/ic_date" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="143dp"
        android:layout_height="54dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/txt_btnUpdate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inpHour2"
        app:layout_constraintVertical_bias="0.566" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="143dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:backgroundTint="@color/red"
        android:text="@string/txt_btnDelete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnUpdate"
        app:layout_constraintTop_toBottomOf="@+id/inpHour2"
        app:layout_constraintVertical_bias="0.566" />

</androidx.constraintlayout.widget.ConstraintLayout>